high contrast mode fix

--- a/core/css/server.css
+++ b/core/css/server.css
@@ -1727,6 +1727,11 @@ body.theme--highcontrast svg.material-design-icon__svg {
 body.theme--dark #header #appmenu li a {
     opacity: 1;
 }
+body.theme--light.theme--highcontrast #header #appmenu li a {
+    opacity: 1;
+    filter: invert(0);
+}
+
 body.theme--highcontrast #header #appmenu li a {
     opacity: 1;
     filter: invert(1);
@@ -1734,11 +1739,12 @@ body.theme--highcontrast #header #appmenu li a {
 body.theme--highcontrast #header #appmenu li a.active {
     filter: invert(0);
 }
-body.theme--dark.theme--highcontrast #header #appmenu li .icon-more-white {
+body.theme--highcontrast #header #appmenu li .icon-more-white {
     background-image: var(--icon-more-000);
 }
 body.theme--dark.theme--highcontrast #header .header-menu.unified-search a.header-menu__trigger,
-body.theme--dark.theme--highcontrast #header .notifications-button.hasNotifications {
+body.theme--highcontrast #header .notifications-button.hasNotifications,
+body.theme--highcontrast #unified-search .header-menu__trigger {
     opacity: 1 !important;
 }
 body.theme--dark.theme--highcontrast #header #appmenu li:hover a,
